corrected logo spacing

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -214,8 +214,8 @@
     width: 10%;
     visibility: visible;
     cursor: pointer;
-    margin-left:23.5em;
-    margin-top: 2.5em;
+    margin-left:26.5em;
+    margin-top: 3em;
   }
 
 
